[package]
name = "psarcfs"
version = "0.1.0"
authors = ["Maikel Wever <maikelwever@gmail.com>"]

[dependencies]
byteorder = "1"
clap = "2.31"
error-chain = "0.12"
lzma-rs = '0.1'
libmath = '0.2'
flate2 = "1.0"
fuse = { git = "https://github.com/zargony/fuse-rs", branch = "modernize" }
libc = "0.2"
id_tree = "1.7"
